# gamewave

./: README.md  build.sh  lib.main.dart  pubspec.yaml
.github/workflows/: build-apk.yml
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/gamewave/: MainActivity.kt
android/src/main/: AndroidManifest.xml
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  lib.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
nethernet_lib/: Cargo.toml  README.md  all_code.txt  servers.json
nethernet_lib/benches/: nethernet.rs
nethernet_lib/examples/: client.rs  internet_host.rs  internet_join.rs  mc_host.rs  mc_join.rs  server.rs
nethernet_lib/src/: lib.rs
nethernet_lib/src/builders/: motd.rs
nethernet_lib/src/error/: mod.rs
nethernet_lib/src/protocol/: constants.rs  message.rs  signal.rs
nethernet_lib/src/protocol/packet/: mod.rs
nethernet_lib/src/protocol/packet/discovery/: crypto.rs  message.rs  mod.rs  packet.rs  request.rs  response.rs  server_data.rs
nethernet_lib/src/protocol/types/: ints.rs  mod.rs  primitives.rs
nethernet_lib/src/protocol/webrtc/: error.rs  mod.rs  negotiation.rs
nethernet_lib/src/session/: mod.rs
nethernet_lib/src/signaling/: lan.rs  mod.rs
nethernet_lib/src/transport/: listener.rs  stream.rs
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  logic.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_gamewave.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_gamewave.podspec
rust_builder/windows/: CMakeLists.txt
temp_android_fix/: README.md  pubspec.yaml
temp_android_fix/test/: widget_test.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
