[package]
name = "nethernet"
version = "0.2.0"
edition = "2021"
description = "NetherNet protocol implementation over WebRTC for Minecraft Bedrock"
license = "MIT"

# Указываем, какие примеры лежат в папке examples
[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "mc_host"
path = "examples/mc_host.rs"

[[example]]
name = "mc_join"
path = "examples/mc_join.rs"

[[example]]
name = "internet_host"
path = "examples/internet_host.rs"

[[example]]
name = "internet_join"
path = "examples/internet_join.rs"

[[example]]
name = "test_ws"
path = "examples/test_ws.rs"

[dependencies]
# Базовые асинхронные штуки
tokio = { version = "1.30", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
futures = "0.3"
futures-util = "0.3"

# WebRTC для создания туннеля и пробива NAT
webrtc = "0.17"

# Работа с байтами (обязательно для сетевых пакетов)
bytes = "1.5"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Ошибки
thiserror = "2.0"

# Криптография (для расшифровки пакетов локального Майнкрафта)
aes = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"

# =========================================================
# НОВЫЕ ЗАВИСИМОСТИ ДЛЯ ИНТЕРНЕТ-ТУННЕЛЯ (Твой сервер)
# =========================================================
# Для HTTP запросов (Регистрация / Логин)
reqwest = { version = "0.12", features = ["json"] }

# Для работы с WebSockets (Сигнальный сервер e1.aurorix.net)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Для JSON (Формат твоих SignalMessage)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
# Для тестов производительности (папка benches/)
criterion = "0.5"

[[bench]]
name = "nethernet"
harness = false
