[package]
name = "rust_lib_gamewave"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1.30", features = ["full"] }
futures-util = "0.3"
bytes = "1.5"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

# ПРОВЕРЬ ЭТОТ ПУТЬ! 
# Он должен вести из папки ~/gamewave/rust в папку ~/nethernet
nethernet = { path = "../nethernet_lib" }
